--- a/changePassword.html
+++ b/changePassword.html
@@ -23,7 +23,7 @@
 
 			<div class="box menu"><!-- ヘッダーメニュー-->
 				<ul id="dropmenu">
-	 				<li><a href="#">メニュー</a>
+	 				<li><a href="mainMenu-admin.php">メニュー</a>
 	   			 		<ul>
 	    				</ul>
 	 				 </li>
@@ -58,18 +58,19 @@
 					<table align="center">
 						<tr>
 							<td>旧パスワード</td>
-							<td><input type="text" name="oldPass"></td>
+							<td><input type="password" name="oldPass"></td>
 						<tr>
 						<tr>
 							<td>新パスワード</td>
-							<td><input type="text" name="newPass"></td>
+							<td><input type="password" name="newPass"></td>
 						</tr>
 						<tr>
 							<td>確認用パスワード</td>
-							<td><input type="text" name="checkPass"></td>
+							<td><input type="password" name="checkPass"></td>
 						<tr>
 					</table>
-				<p><input type="submit" value="変更">
+				<p><input type="submit" value="変更"></p>
+				</form>
 			</div>
 
 			<footer class="box footer">
