--- a/error.html
+++ b/error.html
@@ -14,26 +14,28 @@
 
 			<div class="box menu"><!-- ヘッダーメニュー-->
 				<ul id="dropmenu">
-	 				<li><a href="#">メニュー</a>
+	 				<li><a href="mainMenu-admin.php">メニュー</a>
 	   			 		<ul>
 	    				</ul>
 	 				 </li>
-	  				<li><a href="#">勤務時間表</a>
+	  				<li><a href="ovarallWarkTime.html">勤務時間表</a>
 	   					<ul>
 	   					</ul>
 	 				</li>
-	 				<li><a href="#">休日設定</a>
+	 				<li><a href="settingHoliday.html">休日設定</a>
 	    				<ul>
 	   					</ul>
 	 				</li>
 	  				<li><a href="#">ユーザー設定</a>
 	   					<ul>
-     					 	<li><a href="#">パスワード変更</a></li>
-	     					<li><a href="#">ユーザー設定変更</a></li>
-	     					<li><a href="#">ユーザー登録</a></li>
+     					 	<li><a href="changePassword.html">パスワード変更</a></li>
+
+	     					<li><a href="updateUser.html">ユーザー設定変更</a></li>
+
+	     					<li><a href="insertUser.html">ユーザー登録</a></li>
 	   					</ul>
 	  				</li>
-	  				<li><a href="#">休憩時間設定</a>
+	  				<li><a href="settingRestTime.html">休憩時間設定</a>
 	   					<ul>
 	   					</ul>
 	  				</li>
