--- a/insertUser.html
+++ b/insertUser.html
@@ -92,7 +92,7 @@
 
 			<div class="box menu"><!-- ヘッダーメニュー-->
 				<ul id="dropmenu">
-	 				<li><a href="#">メニュー</a>
+	 				<li><a href="mainMenu-admin.php">メニュー</a>
 	   			 		<ul>
 	    				</ul>
 	 				 </li>
@@ -169,24 +169,24 @@
 						<tr>
 							<td>表示色</td>
 							<td>
-								<table align="center" id="font">
+								<table>
 									<tr>
-										<td><input type="radio" name="color" value="brack">黒</td>
+										<td align="left"><input type="radio" name="color" value="brack">黒</td>
 										<td><input type="radio" name="color" value="gray"><font color="gray">灰色</font></td>
 										<td><input type="radio" name="color" value="red"><font color="red">赤</font></td>
-										<td><input type="radio" name="color" value="orange"><font color="orange">オレンジ</font></td>
+										<td><input type="radio" name="color" value="magenta "><font color="magenta">マゼンタ</font></td>
+									</tr>
+									<tr>
+										<td><input type="radio" name="color" value="orange"><font color="orange">橙</font></td>
+										<td><input type="radio" name="color" value="navy"><font color="navy">紺色</font></td>
+										<td><input type="radio" name="color" value="blue"><font color="blue">青</font></td>
+										<td><input type="radio" name="color" value="beige"><font color="olive">オリーブ</font></td>
 									</tr>
 									<tr>
 										<td><input type="radio" name="color" value="green"><font color="green">緑</font></td>
-										<td><input type="radio" name="color" value="blue"><font color="blue">青</font></td>
-										<td><input type="radio" name="color" value="purple"><font color="purple">紫</font></td>
 										<td><input type="radio" name="color" value="lime"><font color="lime">黄緑</font></td>
-									</tr>
-									<tr>
+										<td><input type="radio" name="color" value="purple"><font color="purple">紫</font></td>
 										<td><input type="radio" name="color" value="cyan"><font color="cyan">シアン</font></td>
-										<td><input type="radio" name="color" value="beige"><font color="olive">オリーブ</font></td>
-										<td><input type="radio" name="color" value="magenta "><font color="magenta">マゼンタ</font></td>
-										<td><input type="radio" name="color" value="navy"><font color="navy">紺色</font></td>
 									</tr>
 								</table>
 							</td>
