--- a/updateUser.html
+++ b/updateUser.html
@@ -64,12 +64,30 @@
 				return false;
 			});
 
+			var admins = [
+				['管理者', '講師', 'red','赤'],
+				['ユーザ', '営業', 'navy', '紺色'],
+				['管理者', '講師', 'black', '黒'],
+				['管理者', '営業', 'green', '緑']
+			];
+
+			$('#select_user').on('change', function(){
+				var user_id = $('#select_user option:selected').val();
+				$('.s').text(admins[user_id][0]);
+				$('.p').text(admins[user_id][1]);
+				$('.c').text(admins[user_id][3]);
+				$('.c').css("color",admins[user_id][2]);
+			});
+
 			if($.browser.msie && $.browser.version<7){
 				$(window).scroll(function(){
 					$("#glayLayer").get(0).style.setExpression("top","$(document).scrollTop()+'px'");
 					$("#overLayer").get(0).style.setExpression("top","($(document).scrollTop()+$(window).height()/2)+'px'");
 				});
 			}
+
+
+
 
 		});
 		</script>
@@ -91,7 +109,7 @@
 
 			<div class="box menu"><!-- ヘッダーメニュー-->
 				<ul id="dropmenu">
-	 				<li><a href="#">メニュー</a>
+	 				<li><a href="mainMenu-admin.php">メニュー</a>
 	   			 		<ul>
 	    				</ul>
 	 				 </li>
@@ -123,16 +141,22 @@
 
 				<form action="#" method="POST">
 					<p>ユーザー :
-						<select name="name">
-							<option value="1">Aさん</option>
-							<option value="2">Bさん</option>
-							<option value="3">Cさん</option>
-							<option value="4">Dさん</option>
-						<select>
+						<select name="name" id="select_user">
+							<option value="0">Aさん</option>
+							<option value="1">Bさん</option>
+							<option value="2">Cさん</option>
+							<option value="3">Dさん</option>
+						</select>
 					</p>
 					<table align="center">
 						<tr>
+							<td></td>
+							<td>変更前設定</td>
+							<td></td>
+						</tr>
+						<tr>
 							<td>権限</td>
+							<td class="s">管理者</td>
 							<td><select name="authority">
 									<option value="1">管理者</option>
 									<option value="2">ユーザー</option>
@@ -141,6 +165,7 @@
 						<tr>
 						<tr>
 							<td>役割</td>
+							<td class="p">営業</td>
 							<td><select name="position">
 									<option value="1">講師</option>
 									<option value="2">営業</option>
@@ -149,33 +174,28 @@
 						<tr>
 						<tr>
 							<td>表示色</td>
+							<td class="c" style="color:red;">赤</td>
 							<td>
-								<dl>
-									<dt><button>色設定</button> <span id="colordata1"></span></dt>
-									<dd class="clearfix">
-										<table align="center">
-											<tr>
-												<td><input type="radio" name="color" value="brack">黒</td>
-												<td><input type="radio" name="color" value="gray"><font color="gray">灰色</font></td>
-												<td><input type="radio" name="color" value="red"><font color="red">赤</font></td>
-												<td><input type="radio" name="color" value="orange"><font color="orange">オレンジ</font></td>
-											</tr>
-											<tr>
-												<td><input type="radio" name="color" value="green"><font color="green">緑</font></td>
-												<td><input type="radio" name="color" value="blue"><font color="blue">青</font></td>
-												<td><input type="radio" name="color" value="purple"><font color="purple">紫</font></td>
-												<td><input type="radio" name="color" value="lime"><font color="lime">黄緑</font></td>
-											</tr>
-											<tr>
-												<td><input type="radio" name="color" value="cyan"><font color="cyan">シアン</font></td>
-												<td><input type="radio" name="color" value="beige"><font color="olive">オリーブ</font></td>
-												<td><input type="radio" name="color" value="magenta "><font color="magenta">マゼンタ</font></td>
-												<td><input type="radio" name="color" value="navy"><font color="navy">紺色</font></td>
-											</tr>
-										</table>
-										<button>決定</button>
-									</dd>
-								</dl>
+								<table>
+									<tr>
+										<td align="left"><input type="radio" name="color" value="brack">黒</td>
+										<td><input type="radio" name="color" value="gray"><font color="gray">灰色</font></td>
+										<td><input type="radio" name="color" value="red"><font color="red">赤</font></td>
+										<td><input type="radio" name="color" value="magenta "><font color="magenta">マゼンタ</font></td>
+									</tr>
+									<tr>
+										<td><input type="radio" name="color" value="orange"><font color="orange">橙</font></td>
+										<td><input type="radio" name="color" value="navy"><font color="navy">紺色</font></td>
+										<td><input type="radio" name="color" value="blue"><font color="blue">青</font></td>
+										<td><input type="radio" name="color" value="beige"><font color="olive">オリーブ</font></td>
+									</tr>
+									<tr>
+										<td><input type="radio" name="color" value="green"><font color="green">緑</font></td>
+										<td><input type="radio" name="color" value="lime"><font color="lime">黄緑</font></td>
+										<td><input type="radio" name="color" value="purple"><font color="purple">紫</font></td>
+										<td><input type="radio" name="color" value="cyan"><font color="cyan">シアン</font></td>
+									</tr>
+								</table>
 							</td>
 						</tr>
 					</table>
