--- a/ovarallWarkTime.html
+++ b/ovarallWarkTime.html
@@ -50,6 +50,7 @@
 			</div>
 
 			<div class="box main-container">
+
 				<div class="workTime">
 					<p>勤務時間表</p>
 					<div class="selectbox">
@@ -114,17 +115,19 @@
 								<input type="radio" name="work" value="period">期間
 								&nbsp;&nbsp;&nbsp;<input type="submit" value="表示">
 					</div>
+
 					<div class="selectbox">
-					<p>検索メニュー</p>
-					氏名 <select name="user">
-							<option value="1">Aさん</option>
-							<option value="2">Bさん</option>
-							<option value="3">Cさん</option>
-							<option value="4">Dさん</option>
+						<p>検索メニュー</p>
+						氏名 <select name="user">
+								<option value="1">Aさん</option>
+								<option value="2">Bさん</option>
+								<option value="3">Cさん</option>
+								<option value="4">Dさん</option>
 						</select>
-					<span style="margin-left:50%;">
-					<input type="submit" value="検索">
-					<input type="submit" value="全件表示"></span>
+						<span style="margin-left:50%;">
+							<input type="submit" value="検索">
+							<input type="submit" value="全件表示">
+						</span>
 					</div>
 
 			<br>
@@ -132,15 +135,15 @@
 			<br>
 
 			<div class="worksheet">
-			<table>
-				<tr class="record"><td>氏名</td><td>出勤日合計</td><td>欠席日数</td><td>営業日数</td><td>休憩時間</td><td>労働時間合計</td><td>月平均<br>労働時間</td><td>週平均<br>労働時間</td></tr>
-				<tr><td><a href="personalWorkTime.html">神田太郎</a></td><td>21</td><td>0</td><td>22</td><td>22.0</td><td>124.0</td><td>5.6</td><td>5.6</td></tr>
-				<tr><td><a href="#">東京太郎</a></td><td>21</td><td>1</td><td>22</td><td>22.0</td><td>124.0</td><td>5.6</td><td>5.6</td></tr>
-				<tr><td><a href="#">秋葉流</a></td><td>22</td><td>0</td><td>22</td><td>22.0</td><td>132.0</td><td>6</td><td>6</td></tr>
-				<tr><th>合計</th><th>64</th><th>1</th><th>66</th><th>66.0</th><th>380.0</th><th>17.2</th><th>17.2</th></tr>
-				<tr><th>平均</th><th>21.3</th><th>0.3</th><th>22.0</th><th>22.0</th><th>126.6</th><th>5.7</th><th>5.7</th></tr>
-			</table>
-			<p class="right"><button>excelに出力</button>　　<button>PDFに出力</button></p>
+				<table>
+					<tr class="record"><td>氏名</td><td>出勤日合計</td><td>欠席日数</td><td>営業日数</td><td>休憩時間</td><td>労働時間合計</td><td>月平均<br>労働時間</td><td>週平均<br>労働時間</td></tr>
+					<tr><td><a href="personalWorkTime.html">神田太郎</a></td><td>21</td><td>0</td><td>22</td><td>22.0</td><td>124.0</td><td>5.6</td><td>5.6</td></tr>
+					<tr><td><a href="#">東京太郎</a></td><td>21</td><td>1</td><td>22</td><td>22.0</td><td>124.0</td><td>5.6</td><td>5.6</td></tr>
+					<tr><td><a href="#">秋葉流</a></td><td>22</td><td>0</td><td>22</td><td>22.0</td><td>132.0</td><td>6</td><td>6</td></tr>
+					<tr><th>合計</th><th>64</th><th>1</th><th>66</th><th>66.0</th><th>380.0</th><th>17.2</th><th>17.2</th></tr>
+					<tr><th>平均</th><th>21.3</th><th>0.3</th><th>22.0</th><th>22.0</th><th>126.6</th><th>5.7</th><th>5.7</th></tr>
+				</table>
+				<p class="right"><button>excelに出力</button>　　<button>PDFに出力</button></p>
 			</div>
 			</div>
 			</div>
