--- a/login.html
+++ b/login.html
@@ -9,18 +9,18 @@
 	<body>
 		<div class="container">
 			<div class="box title">
-				<header class="box">
-					<h1 class="title">勤怠管理システム</h1>
-				</header>
+			<header class="box">
+				<h1 class="title">勤怠管理システム</h1>
+			</header>
 			</div>
-
 			<div class="box main-container">
+
 				<div class="loginbox"><!-- ログインフォーム用ボックス -->
 					<div class="loginTitle"><!-- ボックスタイトル -->
 						ログイン
 					</div>
 					<div class="loginForm">
-						<form action="mainMenu-admin.php" method="post">
+						<form action="#" method="post">
 							<br>
 
 							ユーザーID<br>
