--- a/changePassword.html
+++ b/changePassword.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="design.css">
 		<link rel="stylesheet" href="content.css">
+		<script src="./jquery-1.11.3.min.js"></script>
 		<title>パスワード変更画面</title>
 	</head>
 	<body>
@@ -52,6 +53,8 @@
 			</div>
 
 			<div class="box main-container">
+			<script type="text/javascript" src="./javascript.js">
+			</script>
 				<div class="changePass">
 				<p>パスワード変更</p>
 				<form action="#" method="POST">
@@ -69,7 +72,7 @@
 							<td><input type="password" name="checkPass"></td>
 						<tr>
 					</table>
-				<p><input type="submit" value="変更"></p>
+				<p><input type="submit" id="changePassword" value="変更"></p>
 				</form>
 			</div>
 
@@ -77,6 +80,13 @@
 				<p>Copyright © 2010-2015 FusionOne Co.,Ltd. All Rights Reserved.</p>
 			</footer>
 
+			<script>
+				$('#changePassword').click(function() {
+					if (!confirm('パスワードを変更します。\nよろしいですか？')) {
+						return false;
+					}
+				});
+			</script>
 		</div>
 	</body>
 </html>
