--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
 							パスワード<br>
 							<input type="password" name="password"><br><br>
 
-							<input type="submit" value="ログイン">
+							<input type="submit" id="login" value="ログイン">
 
 						</form>
 					</div>
