--- a/error.html
+++ b/error.html
@@ -4,6 +4,18 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="design.css">
 		<link rel="stylesheet" href="content.css">
+		<script src="./jquery-1.11.3.min.js"></script>
+		<script>
+
+		$(function(){
+			$('a[href="login.html"]').click(function() {
+				if (!confirm('ログアウトします。\nよろしいですか？')) {
+					return false;
+				}
+			});
+		});
+
+		</script>
 		<title>エラー画面</title>
 	</head>
 	<body>
@@ -11,6 +23,15 @@
 			<header class="box">
 				<h1 class="title">勤怠管理システム</h1>
 			</header>
+
+			<div class="box width70 clearfix">
+				<div class="userInfo float-left">
+					<p>ユーザー名 : admin / 権限 : 管理者</p>
+				</div>
+				<div class="userInfo float-right">
+					<p><a href="login.html">ログアウト</a></p>
+				</div>
+			</div>
 
 			<div class="box menu"><!-- ヘッダーメニュー-->
 				<ul id="dropmenu">
@@ -47,21 +68,15 @@
 					■ エラー
 				</div>
 				<div id="errorMsg">
-						不正な文字が入力されました。<br>
-						再度入力して下さい。<br>
-						<br>
-						<br>
+					不正な文字が入力されました。<br>
+					再度入力して下さい。<br>
+					<br>
+					<br>
 
-						<div align="center">
-							<a href="mainMenu.html">
-								メインメニューへ戻る
-							</a>
-						</div>
+					<div align="center">
+						<a href="mainMenu-admin.php">メインメニューへ戻る</a>
+					</div>
 				</div>
-
-
-
-
 			</div>
 
 			<footer class="box footer">
