--- a/ovarallWarkTime.html
+++ b/ovarallWarkTime.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="design.css">
 		<link rel="stylesheet" href="content.css">
+		<script src="./jquery-1.11.3.min.js"></script>
+		<script src="./workTime.js"></script>
 		<title>勤務時間表(全体)画面</title>
 	</head>
 	<body>
@@ -26,7 +28,7 @@
 	 				<li><a href="mainMenu-admin.php">メニュー</a>
 	   			 		<ul>
 	    				</ul>
-	 				 </li>
+	 				</li>
 	  				<li><a href="ovarallWarkTime.html">勤務時間表</a>
 	   					<ul>
 	   					</ul>
@@ -54,25 +56,27 @@
 				<div class="workTime">
 					<p>勤務時間表</p>
 					<div class="selectbox">
-						日時 &lt;&lt;<select name="year">
-										<option value="2015">2015</option>
-										<option value="2014">2014</option>
-										<option value="2013">2013</option>
-									</select> 年
-									<select name="month">
-									<option value="1">1</option>
-									<option value="2">2</option>
-									<option value="3">3</option>
-									<option value="4">4</option>
-									<option value="5">5</option>
-									<option value="6">6</option>
-									<option value="7">7</option>
-									<option value="8">8</option>
-									<option value="9">9</option>
-									<option value="10">10</option>
-									<option value="11">11</option>
-									<option value="12">12</option>
-								</select> 月&gt;&gt;
+						日時 &lt;&lt;
+						<select name="year">
+							<option value="2015">2015</option>
+							<option value="2014">2014</option>
+							<option value="2013">2013</option>
+						</select> 年
+
+						<select name="month">
+							<option value="1">1</option>
+							<option value="2">2</option>
+							<option value="3">3</option>
+							<option value="4">4</option>
+							<option value="5">5</option>
+							<option value="6">6</option>
+							<option value="7">7</option>
+							<option value="8">8</option>
+							<option value="9">9</option>
+							<option value="10">10</option>
+							<option value="11">11</option>
+							<option value="12">12</option>
+						</select> 月&gt;&gt;
 
 				<!-- 他の表示期間選択した場合の項目
 
@@ -108,49 +112,71 @@
 				 -->
 						<br>
 						<br>
-					表示期間 : <input type="radio" name="work" value="year">年次
-								<input type="radio" name="work" value="month" checked>月次
-								<input type="radio" name="work" value="week">週次
-								<input type="radio" name="work" value="day">日次
-								<input type="radio" name="work" value="period">期間
-								&nbsp;&nbsp;&nbsp;<input type="submit" value="表示">
+						表示期間 :
+						<input type="radio" name="work" value="year">年次
+						<input type="radio" name="work" value="month" checked>月次
+						<input type="radio" name="work" value="week">週次
+						<input type="radio" name="work" value="day">日次
+						<input type="radio" name="work" value="period">期間
+						&nbsp;&nbsp;&nbsp;<input type="submit" value="表示">
 					</div>
 
 					<div class="selectbox">
 						<p>検索メニュー</p>
-						氏名 <select name="user">
-								<option value="1">Aさん</option>
-								<option value="2">Bさん</option>
-								<option value="3">Cさん</option>
-								<option value="4">Dさん</option>
+						氏名
+						<select name="user">
+							<option value="1">Aさん</option>
+							<option value="2">Bさん</option>
+							<option value="3">Cさん</option>
+							<option value="4">Dさん</option>
 						</select>
+
 						<span style="margin-left:50%;">
 							<input type="submit" value="検索">
 							<input type="submit" value="全件表示">
 						</span>
 					</div>
 
-			<br>
-			<p>表示期間 : 20XX年X月XX日 ～ 20XX年X月XX日
-			<br>
+					<br>
+					<p>表示期間 : 20XX年X月XX日 ～ 20XX年X月XX日
+					<br>
 
-			<div class="worksheet">
-				<table>
-					<tr class="record"><td>氏名</td><td>出勤日合計</td><td>欠席日数</td><td>営業日数</td><td>休憩時間</td><td>労働時間合計</td><td>月平均<br>労働時間</td><td>週平均<br>労働時間</td></tr>
-					<tr><td><a href="personalWorkTime.html">神田太郎</a></td><td>21</td><td>0</td><td>22</td><td>22.0</td><td>124.0</td><td>5.6</td><td>5.6</td></tr>
-					<tr><td><a href="#">東京太郎</a></td><td>21</td><td>1</td><td>22</td><td>22.0</td><td>124.0</td><td>5.6</td><td>5.6</td></tr>
-					<tr><td><a href="#">秋葉流</a></td><td>22</td><td>0</td><td>22</td><td>22.0</td><td>132.0</td><td>6</td><td>6</td></tr>
-					<tr><th>合計</th><th>64</th><th>1</th><th>66</th><th>66.0</th><th>380.0</th><th>17.2</th><th>17.2</th></tr>
-					<tr><th>平均</th><th>21.3</th><th>0.3</th><th>22.0</th><th>22.0</th><th>126.6</th><th>5.7</th><th>5.7</th></tr>
-				</table>
-				<p class="right"><button>excelに出力</button>　　<button>PDFに出力</button></p>
+					<div class="worksheet">
+						<table>
+							<tr class="record">
+								<td>氏名</td><td>出勤日合計</td><td>欠席日数</td><td>営業日数</td><td>休憩時間</td>
+								<td>労働時間合計</td><td>月平均<br>労働時間</td><td>週平均<br>労働時間</td>
+							</tr>
+							<tr>
+								<td><a href="personalWorkTime.html">神田太郎</a></td><td>21</td><td>0</td>
+								<td>22</td><td>22.0</td><td>124.0</td><td>5.6</td><td>5.6</td>
+							</tr>
+							<tr>
+								<td><a href="#">東京太郎</a></td><td>21</td><td>1</td><td>22</td>
+								<td>22.0</td><td>124.0</td><td>5.6</td><td>5.6</td>
+							</tr>
+							<tr>
+								<td><a href="#">秋葉流</a></td><td>22</td><td>0</td>
+								<td>22</td><td>22.0</td><td>132.0</td><td>6</td><td>6</td>
+							</tr>
+							<tr>
+								<th>合計</th><th>64</th><th>1</th><th>66</th><th>66.0</th>
+								<th>380.0</th><th>17.2</th><th>17.2</th></tr>
+							<tr>
+								<th>平均</th><th>21.3</th><th>0.3</th><th>22.0</th>
+								<th>22.0</th><th>126.6</th><th>5.7</th><th>5.7</th>
+							</tr>
+						</table>
+						<p class="right"><button class="exportExcel">excelに出力</button>　　<button class="exportPDF">PDFに出力</button></p>
+					</div>
+				</div>
 			</div>
-			</div>
-			</div>
+
 			<footer class="box footer">
 				<p>Copyright © 2010-2015 FusionOne Co.,Ltd. All Rights Reserved.</p>
 			</footer>
-			</div>
+
+		</div>
 
 	</body>
 </html>
