--- a/personalWorkTime.html
+++ b/personalWorkTime.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="design.css">
 		<link rel="stylesheet" href="content.css">
+		<script src="./jquery-1.11.3.min.js"></script>
+		<script src="./workTime.js"></script>
 		<title>勤務時間表(個人)画面</title>
 	</head>
 	<body>
@@ -24,9 +26,9 @@
 			<div class="box menu"><!-- ヘッダーメニュー-->
 				<ul id="dropmenu">
 	 				<li><a href="mainMenu-admin.php">メニュー</a>
-	   			 		<ul>
+						<ul>
 	    				</ul>
-	 				 </li>
+	 				</li>
 	  				<li><a href="ovarallWarkTime.html">勤務時間表</a>
 	   					<ul>
 	   					</ul>
@@ -53,25 +55,26 @@
 				<div class="workTime">
 					<p>勤務時間表</p>
 					<div class="selectbox">
-						日時 &lt;&lt;<select name="year">
-										<option value="2015">2015</option>
-										<option value="2014">2014</option>
-										<option value="2013">2013</option>
-									</select> 年
-									<select name="month">
-									<option value="1">1</option>
-									<option value="2">2</option>
-									<option value="3">3</option>
-									<option value="4">4</option>
-									<option value="5">5</option>
-									<option value="6">6</option>
-									<option value="7">7</option>
-									<option value="8">8</option>
-									<option value="9">9</option>
-									<option value="10">10</option>
-									<option value="11">11</option>
-									<option value="12">12</option>
-								</select> 月&gt;&gt;
+						日時 &lt;&lt;
+						<select name="year">
+							<option value="2015">2015</option>
+							<option value="2014">2014</option>
+							<option value="2013">2013</option>
+						</select> 年
+						<select name="month">
+							<option value="1">1</option>
+							<option value="2">2</option>
+							<option value="3">3</option>
+							<option value="4">4</option>
+							<option value="5">5</option>
+							<option value="6">6</option>
+							<option value="7">7</option>
+							<option value="8">8</option>
+							<option value="9">9</option>
+							<option value="10">10</option>
+							<option value="11">11</option>
+							<option value="12">12</option>
+						</select> 月&gt;&gt;
 
 				<!-- 他の表示期間選択した場合の項目
 
@@ -107,70 +110,93 @@
 				 -->
 						<br>
 						<br>
-					表示期間 : <input type="radio" name="work" value="year">年次
-								<input type="radio" name="work" value="month" checked>月次
-								<input type="radio" name="work" value="week">週次
-								<input type="radio" name="work" value="day">日次
-								<input type="radio" name="work" value="period">期間
-								&nbsp;&nbsp;&nbsp;<input type="submit" value="表示">
+						表示期間 :
+						<input type="radio" name="work" value="year">年次
+						<input type="radio" name="work" value="month" checked>月次
+						<input type="radio" name="work" value="week">週次
+						<input type="radio" name="work" value="day">日次
+						<input type="radio" name="work" value="period">期間
+						&nbsp;&nbsp;&nbsp;<input type="submit" value="表示">
 					</div>
 
-			<br>
-			<p>表示期間 : 20XX年X月XX日 ～ 20XX年X月XX日
-			<br>
+					<br>
+					<p>表示期間 : 20XX年X月XX日 ～ 20XX年X月XX日
+					<br>
 
-			<div class="worksheet">
-			<table>
-				<caption>神田太郎出勤表</caption>
-				<tr class="record"><td>日付</td><td>曜日</td><td>出勤</td><td>退勤</td><td>休憩時間</td><td>実働時間</td><td>ステータス</td><td>備考欄</td></tr>
-				<tr><td>2015/X/1</td><td>月</td><td>9:00</td><td>18:00</td><td>1.0</td><td>8.0</td>
-					<td><select name="status">
-							<option value="1">代休</option>
-							<option value="2">代出</option>
-							<option value="3">休み</option>
-							<option value="4">早退</option>
-							<option value="5">遅番</option>
-						</select>
-					</td>
-					<td><textarea name="etc" rows="1" cols="15"></textarea></td>
-				</tr>
-				<tr><td>2015/X/2</td><td>火</td><td>9:00</td><td>18:00</td><td>1.0</td><td>8.0</td>
-					<td><select name="status">
-							<option value="1">代休</option>
-							<option value="2">代出</option>
-							<option value="3">休み</option>
-							<option value="4">早退</option>
-							<option value="5">遅番</option>
-						</select>
-					</td>
-					<td><textarea name="etc" rows="1" cols="15"></textarea></td>
-				</tr>
-				<tr><td colspan="8">・</td></tr>
-				<tr><td colspan="8">・</td></tr>
-				<tr><td colspan="8">・</td></tr>
-				<tr><td>2015/X/31</td><td>水</td><td>9:00</td><td>18:00</td><td>1.0</td><td>8.0</td>
-					<td cellpadding="0"><select name="status">
-							<option value="1">代休</option>
-							<option value="2">代出</option>
-							<option value="3">休み</option>
-							<option value="4">早退</option>
-							<option value="5">遅番</option>
-						</select>
-					</td>
-					<td><textarea name="etc" rows="1" cols="15"></textarea></td>
-				</tr>
-				<tr><th>合計</th><th></th><th></th><th></th><th>22.0</th><th>124.0</th><th></th><th></th></tr>
-				<tr><th>平均</th><th></th><th></th><th></th><th>1.0</th><th>8.0</th><th></th><th></th></tr>
-			</table>
-			<div class="right"><button>記録</button></div>
-			<p class="right"><button>excelに出力</button>　　<button>PDFに出力</button></p>
+					<div class="worksheet">
+						<table>
+							<caption>神田太郎出勤表</caption>
+								<tr class="record">
+									<td>日付</td><td>曜日</td><td>出勤</td><td>退勤</td>
+									<td>休憩時間</td><td>実働時間</td><td>ステータス</td><td>備考欄</td>
+								</tr>
+								<tr>
+									<td>2015/X/1</td><td>月</td><td>9:00</td>
+									<td>18:00</td><td>1.0</td><td>8.0</td>
+									<td>
+										<select name="status">
+											<option value="1">代休</option>
+											<option value="2">代出</option>
+											<option value="3">休み</option>
+											<option value="4">早退</option>
+											<option value="5">遅番</option>
+										</select>
+									</td>
+									<td><textarea name="etc" rows="1" cols="15"></textarea></td>
+								</tr>
+								<tr>
+									<td>2015/X/2</td><td>火</td><td>9:00</td><td>18:00</td>
+									<td>1.0</td><td>8.0</td>
+									<td>
+										<select name="status">
+											<option value="1">代休</option>
+											<option value="2">代出</option>
+											<option value="3">休み</option>
+											<option value="4">早退</option>
+											<option value="5">遅番</option>
+										</select>
+									</td>
+									<td><textarea name="etc" rows="1" cols="15"></textarea></td>
+								</tr>
+								<tr><td colspan="8">・</td></tr>
+								<tr><td colspan="8">・</td></tr>
+								<tr><td colspan="8">・</td></tr>
+								<tr>
+									<td>2015/X/31</td><td>水</td><td>9:00</td><td>18:00</td>
+									<td>1.0</td><td>8.0</td>
+									<td cellpadding="0">
+										<select name="status">
+											<option value="1">代休</option>
+											<option value="2">代出</option>
+											<option value="3">休み</option>
+											<option value="4">早退</option>
+											<option value="5">遅番</option>
+										</select>
+									</td>
+									<td><textarea name="etc" rows="1" cols="15"></textarea></td>
+								</tr>
+								<tr>
+									<th>合計</th><th></th><th></th><th></th>
+									<th>22.0</th><th>124.0</th><th></th><th></th>
+								</tr>
+								<tr>
+									<th>平均</th><th></th><th></th><th></th>
+									<th>1.0</th><th>8.0</th><th></th><th></th>
+								</tr>
+						</table>
+						<div class="right"><button id="record">記録</button></div>
+						<p class="right">
+							<button class="exportExcel">excelに出力</button>　　
+							<button class="exportPDF">PDFに出力</button>
+						</p>
+					</div>
+				</div>
 			</div>
-			</div>
-			</div>
+
 			<footer class="box footer">
 				<p>Copyright © 2010-2015 FusionOne Co.,Ltd. All Rights Reserved.</p>
 			</footer>
-			</div>
 
+		</div>
 	</body>
 </html>
