--- a/ovarallWarkTime.html
+++ b/ovarallWarkTime.html
@@ -4,13 +4,9 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="design.css">
 		<link rel="stylesheet" href="content.css">
-		<script src="./jquery-1.11.3.min.js"></script>
-		<script src="./workTime.js"></script>
+		<script src="../jquery/jquery-1.11.3.min.js"></script>
+		<script src="./script/workTime.js"></script>
 		<script type="text/javascript">
-<<<<<<< HEAD
-				$(function(){
-				});
-=======
 			$(function(){
 
 				function workChange(){
