--- a/settingHoliday.html
+++ b/settingHoliday.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="design.css">
-		<link rel="stylesheet" href="content.css">
-		<script src="./jquery-1.11.3.min.js"></script>
+		<link rel="stylesheet" href="./css/design.css">
+		<link rel="stylesheet" href="./css/content.css">
+		<script src="./jquery/jquery-1.11.3.min.js"></script>
 		<title>休日設定画面</title>
 	</head>
 	<body>
